using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorStrings
{
    internal static readonly string isMoving = "isMoving";
    internal static readonly string canMove = "canMove";
    internal static readonly string xVelocity = "xVelocity";
    internal static readonly string yVelocity = "yVelocity";
    internal static readonly string isAlive = "isAlive";
}
